<resources>
    <string name="a_home">首页</string>
    <string name="a_enjoy">评鉴</string>
    <string name="a_collect">收藏</string>
    <string name="a_business">商城</string>
    <string name="a_my">我的</string>
    <string name="a_user_name">用户名</string>
    <string name="a_password">密码</string>
    <string name="a_login">登录</string>
    <string name="a_no_account">还没有账号？</string>
    <string name="a_register">注册</string>
    <string name="a_now_register">立即注册</string>
    <string name="a_tel_">手机号：</string>
    <string name="a_input_login_tel">输入登录手机号</string>
    <string name="a_verify_code_">验证码：</string>
    <string name="a_input_verify_code">输入短信验证码</string>
    <string name="a_get_msg">获取短信</string>
    <string name="a_login_password_">登录密码：</string>
    <string name="a_set_login_password">设置登录密码</string>
    <string name="a_pay_password_">支付密码：</string>
    <string name="a_set_pay_password">设置支付密码</string>
    <string name="a_recommend_code_">推广码：</string>
    <string name="a_choose_input">(选填)</string>
    <string name="a_go_enjoy">去评鉴</string>
    <string name="a_publish_enjoy">发表评鉴</string>
    <string name="a_find_whisky">查找威士忌</string>
    <string name="a_whisky_wine_bucket">威士忌酒桶</string>
    <string name="a_whisky">威士忌</string>
    <string name="a_add_wine">创建新酒</string>
    <string name="a_cancel">取消</string>
    <string name="a_select_language">选择语言</string>
    <string name="a_language_chinese">中文</string>
    <string name="a_language_english">英文</string>
    <string name="a_commit">提交</string>
    <string name="a_love">最爱</string>
    <string name="a_wish_list">心愿单</string>
    <string name="a_input_product_name">请填写产品名称</string>
    <string name="a_color_lever">色泽</string>
    <string name="a_input_color_evaluate">写下关于色泽方面评语</string>
    <string name="a_smell_lever">嗅香</string>
    <string name="a_input_smell_evaluate">写下关于嗅香方面评语</string>
    <string name="a_taste_lever">味道</string>
    <string name="a_input_taste_evaluate">写下关于味道方面评语</string>
    <string name="a_rhyme_lever">尾韵</string>
    <string name="a_input_rhyme_evaluate">写下关于尾韵方面评语</string>
    <string name="a_total_evaluate">总评(必填)</string>
    <string name="a_show_picture">晒图</string>
    <string name="a_picture_max_tip">(最多上传3张，不大于1m每张)</string>
    <string name="a_current_location">所在位置</string>
    <string name="a_enjoy_detail">评鉴详情</string>
    <string name="a_input_keyword">请输入关键字</string>
    <string name="a_search">搜索</string>
    <string name="a_go_create_tip">没有找到？去创建新酒</string>
    <string name="a_average_evaluate_">平均评分：</string>
    <string name="a_balance_pound">余额(英镑)</string>
    <string name="a_integral">积分</string>
    <string name="a_can_use_ticket">可用券</string>
    <string name="a_unit_zhang">张</string>
    <string name="a_shop_order">商城订单</string>
    <string name="a_store_order">门店订单</string>
    <string name="a_exit_money">退款/售后</string>
    <string name="a_vclub_school">VClub学院</string>
    <string name="a_content_share">精彩内容与你分享</string>
    <string name="a_booking_table">立即订座</string>
    <string name="a_appoint_no_team">提前预约免排队</string>
    <string name="a_my_spread">我的推广</string>
    <string name="a_advise_feedback">意见反馈</string>
    <string name="a_help_center">帮助中心</string>
    <string name="a_about_us">关于我们</string>
    <string name="a_version_update">版本更新</string>
    <string name="a_appoint_arrive_time_">预约到店时间：</string>
    <string name="a_appoint_arrive_num_">预计到店人数：</string>
    <string name="a_is_need_box_">是否需要包厢：</string>
    <string name="a_is_need_box">是否需要包厢</string>
    <string name="a_cancel_appoint">取消预约</string>
    <string name="a_my_appoint">我的预约</string>
    <string name="a_feedback">意见反馈</string>
    <string name="a_write_advise">写下您的宝贵意见</string>
    <string name="a_person_msg">个人资料</string>
    <string name="a_save">保存</string>
    <string name="a_member_name_">会员名称：</string>
    <string name="a_not_set">未设置</string>
    <string name="a_member_nick_">会员昵称：</string>
    <string name="a_email_">邮箱地址：</string>
    <string name="a_my_sex_">我的性别：</string>
    <string name="a_birthday_">出生日期：</string>
    <string name="a_tel_number_">手机号码：</string>
    <string name="a_change">修改</string>
    <string name="a_current_country_">所在国家：</string>
    <string name="a_choose_country">选择国家</string>
    <string name="a_detail_address_">详细住址：</string>
    <string name="a_input_address">填写地址</string>
    <string name="a_my_integral">我的积分</string>
    <string name="a_current_integral">当前积分</string>
    <string name="a_total_get_integral_">累计获得积分：</string>
    <string name="a_yet_exchange_">已兑换：</string>
    <string name="a_balance_get_integral">收益获得积分</string>
    <string name="a_my_balance_pound">我的余额(英镑)</string>
    <string name="a_recharge">充值</string>
    <string name="a_my_balance">我的余额</string>
    <string name="a_income_">收入：</string>
    <string name="a_earnings_get">收益获得</string>
    <string name="a_now_table">立即订座</string>
    <string name="a_appoint_store">预约门店</string>
    <string name="a_input_arrive_num">请填写预计到店人数</string>
    <string name="a_arrive_time">到店时间</string>
    <string name="a_remark_service_tip">备注您的服务要求（选填）</string>
    <string name="a_now_commit">立即提交</string>
    <string name="a_business_time_">营业时间：</string>
    <string name="a_contact_tel_">联系电话：</string>
    <string name="a_search_store">搜索门店</string>
    <string name="a_balance_recharge">余额充值</string>
    <string name="a_recharge_pound">充值金额(英镑)</string>
    <string name="a_now_recharge">立即充值</string>
    <string name="a_invite_spread_code">邀请推广码</string>
    <string name="a_set">设置</string>
    <string name="a_check_new_version">检查新版本</string>
    <string name="a_logout">退出登录</string>
    <string name="a_copyright_tip1">Vclub版权所有</string>
    <string name="a_copyright_tip2">Copyright@2018-2020 Vclub</string>
    <string name="a_copyright_tip3">ALLRight Reserved</string>
    <string name="a_delivery_msg">物流信息</string>
    <string name="a_sending_goods">派件中</string>
    <string name="a_click_change_header">点击修改头像</string>
    <string name="a_integral_balance_tip">积分余额:(仅支持门店兑换)</string>
    <string name="a_detail">明细</string>
    <string name="a_details">详情</string>
    <string name="a_history">记录</string>
    <string name="a_integral_shop">积分商城</string>
    <string name="a_yet_exchange">已兑</string>
    <string name="a_repertory">库存</string>
    <string name="a_no_repertory_tip">没有库存了</string>
    <string name="a_current_month_earnings">本月收益(分)</string>
    <string name="a_extract_earnings">提取收益</string>
    <string name="a_total_earnings">累计收益(分)</string>
    <string name="a_can_extract_earnings">可提收益(分)</string>
    <string name="a_yet_extract_earnings">已提收益(分)</string>
    <string name="a_spread_members">推广会员(人)</string>
    <string name="a_look_detail">查看明细</string>
    <string name="a_spread_order">推广订单(笔)</string>
    <string name="a_spread_earnings">推广收益</string>
    <string name="a_now_invite">立即邀请</string>
    <string name="a_invite_friends">邀请好友，绑定关系</string>
    <string name="a_now_to_member">立即成为Vclub会员</string>
    <string name="a_me_is">我是</string>
    <string name="a_invite_tip">我为Vclub代言</string>
    <string name="a_invite_tip1">邀您一起成为Vclub会员</string>
    <string name="a_long_press_recognition">长按识别二维码立即注册</string>
    <string name="a_earnings_extract">收益提取</string>
    <string name="a_extract_to_">提取到：</string>
    <string name="a_input_earnings">输入收益</string>
    <string name="a_can_extract_">可提取：</string>
    <string name="a_all_extract">全部提取</string>
    <string name="a_extract">提取</string>
    <string name="a_spread_member_history">推广会员记录</string>
    <string name="a_develop_time_">发展时间：</string>
    <string name="a_order_money_yuan">订单金额(元)</string>
    <string name="a_order_earnings_fen">订单收益(分)</string>
    <string name="a_my_earnings_fen">我的收益(分)</string>
    <string name="a_order_money_">订单金额：</string>
    <string name="a_order_num_">单号：</string>
    <string name="a_time_">时间：</string>
    <string name="a_spread_order_list">推广订单列表</string>
    <string name="a_flash_sale">限时抢购</string>
    <string name="a_add_new_address">添加新地址</string>
    <string name="a_receive_address">收货地址</string>
    <string name="a_default_address">默认地址</string>
    <string name="a_receive_people_">收件人：</string>
    <string name="a_receive_people_hint">签收人姓名</string>
    <string name="a_tel">手机号</string>
    <string name="a_province_city_">省市区：</string>
    <string name="a_click_select">点击选择</string>
    <string name="a_street_number">街道门牌号</string>
    <string name="a_add_edit_address">添加（编辑）收货地址</string>
    <string name="a_pay_success">支付成功</string>
    <string name="a_pay_money_">支付金额：</string>
    <string name="a_get_integral_">获得积分：</string>
    <string name="a_order_detail">订单详情</string>
    <string name="a_return_home">返回首页</string>
    <string name="a_confirm">确定</string>
    <string name="a_account_balance_">账户余额：</string>
    <string name="a_now_pay">立即支付</string>
    <string name="a_receive_address_">收货地址：</string>
    <string name="a_remark_">留言：</string>
    <string name="a_current_deal_introduce">对本次交易的说明</string>
    <string name="a_use_ticket_">使用优惠券：</string>
    <string name="a_no_can_use">无可用</string>
    <string name="a_total_">合计：</string>
    <string name="a_freight_">运费：</string>
    <string name="a_discount_">优惠：</string>
    <string name="a_ought_pay_">实付：</string>
    <string name="a_all_select">全选</string>
    <string name="a_now_order">立即下单</string>
    <string name="a_get_discount_ticket">领取优惠券</string>
    <string name="a_get_ticket">领券</string>
    <string name="a_get">领取</string>
    <string name="a_shop_car">购物车</string>
    <string name="a_edit">编辑</string>
    <string name="a_price_">价格：</string>
    <string name="a_min_price">最低价</string>
    <string name="a_max_price">最高价</string>
    <string name="a_keyword_">关键字：</string>
    <string name="a_input_keyword_query">输入关键字查询</string>
    <string name="a_brand_">品牌：</string>
    <string name="a_kind_">分类：</string>
    <string name="a_input_password">请输入密码</string>
    <string name="a_temp_no_content">暂时没有内容</string>
    <string name="a_all">全部</string>
    <string name="a_wait_pay">待支付</string>
    <string name="a_wait_send">待发货</string>
    <string name="a_wait_receive">待收货</string>
    <string name="a_wait_evaluate">待评价</string>
    <string name="a_order_number_">订单号：</string>
    <string name="a_default_spec">默认规格</string>
    <string name="a_cancel_order">取消订单</string>
    <string name="a_look_delivery">查看物流</string>
    <string name="a_now_evaluate">立即评价</string>
    <string name="a_logout_success">退出登录成功</string>
    <string name="a_man">男</string>
    <string name="a_woman">女</string>
    <string name="a_re_login">重新登陆</string>
    <string name="a_login_tip">您的登录已超时，请重新登录!</string>
    <string name="a_logout_tip">登出提醒</string>
    <string name="a_your_tel_">您的手机：</string>
    <string name="a_set_new_tel">设置新手机号</string>
    <string name="a_tel_unused_tip">若旧手机无法使用请联系客服</string>
    <string name="a_change_tel">修改手机号</string>
    <string name="a_input_right_tel">请输入正确的手机号</string>
    <string name="a_operate_success">操作成功</string>
    <string name="a_next">下一步</string>
    <string name="a_confirm_change">确认修改</string>
    <string name="a_input_sex">请选择您的性别</string>
    <string name="a_select_sex">选择性别</string>
    <string name="a_choose_date">选择日期</string>
    <string name="a_input_birthday">请设置出生日期</string>
    <string name="a_now_change">立即修改</string>
    <string name="a_new_password_">新密码：</string>
    <string name="a_set_new_login_password">设置新的登录密码</string>
    <string name="a_change_login_password">修改登录密码</string>
    <string name="a_input_tel">输入手机号</string>
    <string name="a_delivery_company_">物流公司:</string>
    <string name="a_delivery_no_">快递单号:</string>
    <string name="a_please_choose_delivery_company">请选择快递公司</string>
    <string name="a_input_delivery_no">请输入快递单号</string>
    <string name="a_confirm_send_return">确认寄回</string>
</resources>