<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="98px"
        android:layout_margin="25px"
        android:background="@drawable/shape_bg_white_r5"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="20px"
        android:paddingRight="20px">

        <ImageView
            android:layout_width="30px"
            android:layout_height="30px"
            android:src="@drawable/ic_phone" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20px"
            android:ellipsize="end"
            android:lines="1"
            android:text="@string/a_tel_"
            android:textColor="@color/textMain"
            android:textSize="@dimen/size_30" />

        <EditText
            android:id="@+id/et_tel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20px"
            android:layout_weight="1"
            android:background="@null"
            android:ellipsize="end"
            android:hint="@string/a_input_tel"
            android:lines="1"
            android:text="+44"
            android:textColor="@color/textMain"
            android:textSize="@dimen/size_30" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="98px"
        android:layout_marginLeft="25px"
        android:layout_marginRight="25px"
        android:background="@drawable/shape_bg_white_r5"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="20px"
        android:paddingRight="20px">

        <ImageView
            android:layout_width="30px"
            android:layout_height="30px"
            android:src="@drawable/ic_code" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20px"
            android:ellipsize="end"
            android:lines="1"
            android:text="@string/a_verify_code_"
            android:textColor="@color/textMain"
            android:textSize="@dimen/size_30" />

        <EditText
            android:id="@+id/et_code"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20px"
            android:layout_weight="1"
            android:background="@null"
            android:ellipsize="end"
            android:hint="@string/a_input_verify_code"
            android:lines="1"
            android:maxLength="10"
            android:text=""
            android:textColor="@color/textMain"
            android:textColorHint="@color/textLesser"
            android:textSize="@dimen/size_30" />

        <TextView
            android:id="@+id/tv_get_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:lines="1"
            android:text="@string/a_get_msg"
            android:textColor="@color/colorRed"
            android:textSize="@dimen/size_28" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="98px"
        android:layout_marginLeft="25px"
        android:layout_marginTop="25px"
        android:layout_marginRight="25px"
        android:background="@drawable/shape_bg_white_r5"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="20px"
        android:paddingRight="20px">

        <ImageView
            android:layout_width="30px"
            android:layout_height="30px"
            android:src="@drawable/ic_password" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20px"
            android:ellipsize="end"
            android:lines="1"
            android:text="@string/a_new_password_"
            android:textColor="@color/textMain"
            android:textSize="@dimen/size_30" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20px"
            android:layout_weight="1"
            android:background="@null"
            android:ellipsize="end"
            android:hint="@string/a_set_new_login_password"
            android:lines="1"
            android:maxLength="10"
            android:text=""
            android:textColor="@color/textMain"
            android:textColorHint="@color/textLesser"
            android:textSize="@dimen/size_30" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_next"
        style="@style/ButtonStyle"
        android:layout_width="match_parent"
        android:layout_marginTop="25px"
        android:text="@string/a_now_change" />

</LinearLayout>